Header alignment, Navigation style, and image credit fixes.

--- a/src/styles/sections/_header-footer.scss
+++ b/src/styles/sections/_header-footer.scss
@@ -40,27 +40,29 @@ nav {
         padding: 0;
 
         .navbar-item {
-          display: block;
-          width: 6.25rem;
-          text-align: center;
-          line-height: var(--nav-height);
-          color: var(--tx-secondary);
-          text-decoration: none;
-          font-family: var(--font-main);
-          font-size: 0.875rem;
-          font-weight: 600;
-          letter-spacing: 0.0625rem;
-          transition: all 0.2s ease;
-          box-shadow: 0 0 inset var(--bg-accent-cyan), 0 0 inset var(--bg-secondary);
+          a {
+            display: block;
+            width: 6.25rem;
+            text-align: center;
+            line-height: var(--nav-height);
+            color: var(--tx-secondary);
+            text-decoration: none;
+            font-family: var(--font-main);
+            font-size: 0.875rem;
+            font-weight: 600;
+            letter-spacing: 0.0625rem;
+            transition: all 0.2s ease;
+            box-shadow: 0 0 inset var(--bg-accent-cyan), 0 0 inset var(--bg-secondary);
 
-          &:hover {
-            box-shadow: 0 -.15em inset var(--bg-accent-cyan), 0 3em inset hsla(0, 0%, 50%, 0.2);
-            color: var(--bg-accent-cyan);
-          }
+            &:hover {
+              box-shadow: 0 -.15em inset var(--bg-accent-cyan), 0 3em inset hsla(0, 0%, 50%, 0.2);
+              color: var(--bg-accent-cyan);
+            }
 
-          &.active {
-            box-shadow: 0 -.3em inset var(--bg-accent-cyan), 0 0 inset var(--bg-secondary);
-            color: var(--tx-primary);
+            &.active {
+              box-shadow: 0 -.3em inset var(--bg-accent-cyan), 0 0 inset var(--bg-secondary);
+              color: var(--tx-primary);
+            }
           }
         }
       }
@@ -73,19 +75,27 @@ header {
   background-position: center center;
   display: block;
   height: fit-content;
+
   .header-box {
-    display: block;
+
     .img-credit {
-      display: block;
       text-align: right;
       padding-right: 1rem;
+
+      i {
+        color: var(--bg-accent-cyan);
+        font-family: var(--font-heading);
+        font-size: 1.25rem;
+      }
     }
+
     .header-content {
       padding-block: 4rem;
-      display: block;
+      display: flex;
+      justify-content: center;
+      width: 100%;
 
       .header-text {
-
         width: fit-content;
         padding: 1rem;
         border-radius: var(--radius-lg);
@@ -93,7 +103,7 @@ header {
         background-color: hsla(var(--bg-primary-val), 75%);
         backdrop-filter: blur(0.25rem);
         border: 0.125rem solid hsla(var(--tx-secondary-val), 25%);
-        display: block;
+        text-align: center;
       }
     }
   }
